--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+	<table class="bordered-table">
+		<thead>
+			<tr>
+				<th>Roll number</th>
+			    <th>Name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Gokul</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Govinthan</td>
+			</tr>
+		</tbody>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
